// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Snapshot test of favorite_page_login 1`] = `
"    <>
        <Head>
          <title>お気に入り店舗一覧</title>
        </Head>
        <Header />
        <BreadList list={[menu_list, favorite_list]} />
        <ShopName data={favoriteShops} />
        <Footer />
      </>"
`;

exports[`Snapshot Snapshot test of favorite_page_logout 1`] = `
"<>
    <Header />
    <BreadList list={[menu_list, favorite_list]} />
    <div>
      <div className={styles.favorite_login}>
        <div className={styles.favorite_login_link}>
          <img src="/images/foodkoala_img2.png" alt="コアラ" />
          <br />
          <br />
          <a href="/login">ログイン</a>
        </div>
        <br />
        <p>
          お気に入り店舗一覧を表示したい場合はログインをしてください
        </p>
      </div>
    </div>
    <Footer />
  </>"
`;

exports[`Snapshot Snapshot test of no_favorite_page 1`] = `
"<>
    <Header />
    <BreadList list={[menu_list, favorite_list]} />
    <div>
      <div className={styles.favorite_login}>
        <div className={styles.favorite_login_link}>
          <img src="/images/foodkoala_img2.png" alt="コアラ" />
          <br />
          <br />
          <a href="/shop/list">ショップ一覧へ</a>
        </div>
        <br />
        <p>お気に入り店舗がありません</p>
      </div>
    </div>
    <Footer />
  </>"
`;
